fix flaky tests & make them more robust